# bastion-launcher

./: README.md  package-lock.json  package.json  tailwind.config.ts
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json  ui.json
src-tauri/src/: config.rs  gfx_api.rs  launch.rs  main.rs  misc.rs
src-tauri/src/paths/: install.rs  mod.rs
src/routes/: +page.svelte  BottomBar.svelte  BottomBarDropdown.svelte  ButtonState.ts  ChooseInstall.svelte  CloseButton.svelte  DropdownBox.svelte  DropdownEntry.ts  Home.svelte  InstallIcon.svelte  InstallPath.ts  InstallPathEntry.svelte  LaunchButton.svelte  LaunchButtonState.ts  RadialSetupButton.svelte  SettingsSidebar.svelte  SetupCompatTool.svelte  SetupPage.ts  SetupScreen.svelte  ToggleBox.svelte  UnsupportedWarning.svelte  WelcomePage.svelte
src/scripts/: Compat.ts  Config.ts  GfxApi.ts  InstallPath.ts  Launch.ts  LaunchMethod.ts
